testsuite/tests/overloadedlists/should_fail/overloadedlistsfail02.hs
{-# LANGUAGE OverloadedLists #-}

data Foo = Foo

test :: Foo
test = [7]

main = return ()