testsuite/tests/overloadedlists/should_fail/overloadedlistsfail02.stderr

overloadedlistsfail02.hs:6:8: error:
    • No instance for (GHC.Exts.IsList Foo)
        required by an overloaded list
    • In the expression: [7]
      In an equation for ‘test’: test = [7]

overloadedlistsfail02.hs:6:9: error:
    • No instance for (Num (GHC.Exts.Item Foo))
        required by the literal ‘7’
    • In the expression: 7
      In the expression: [7]
      In an equation for ‘test’: test = [7]
